dash board card update

--- a/web/src/app/admin/dashborad.component.html
+++ b/web/src/app/admin/dashborad.component.html
@@ -1,133 +1,9 @@
 <section class="content">
     <div class="container-fluid ">
         <div class="row p-4 mt-0">
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 crds">
-                <a href="javascript:void(0)" [routerLink]="['/sale/customer', 0]" class="hoc">
-                    <div class="card ">
-                        <div class=" p-4">
-                            <img src="assets/images/customer.png" class="float-left" alt="" width="60" height="60">
-                            <span class="ml-auto float-right name cardName"
-                               >Customer</span>
-                        </div>
-                        <div class="body p-3 text-center">
-                            <a href="javascript:void(0)" [routerLink]="['/sale/customer', 0]">
-                                <i class="  fa fa-arrow-right"></i>
-                            </a>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 crds">
-                <a href="javascript:void(0)" routerLink="/sale/billinglist/0" class="hoc">
-                    <div class="card">
-                        <div class=" p-4">
-                            <img src="assets/images/billing.png" class="float-left" alt="" width="60" height="60"> <span
-                                class="ml-auto float-right cardName" >
-                                Billing Search </span>
-                        </div>
-                        <div class="body p-3 text-center">
-                            <a href="javascript:void(0)" routerLink="/sale/billinglist/0">
-                                <i class="  fa fa-arrow-right"></i>
-                            </a>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 crds">
-                <a href="javascript:void(0)" [routerLink]="['/inventory/supplier',0]" class="hoc">
-                    <div class="card">
-                        <div class=" p-4">
-                            <img src="assets/images/supp.png" class="float-left" alt="" width="60" height="60"> <span
-                                class="ml-auto float-right cardName"
-                                >Supplier </span>
-                        </div>
-                        <div class="body p-3 text-center">
-                            <a href="javascript:void(0)" [routerLink]="['/inventory/supplier',0]">
-                                <i class="  fa fa-arrow-right"></i>
-                            </a>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 crds">
-                <a href="javascript:void(0)" [routerLink]="['/inventory/purchase',0]" class="hoc">
-                    <div class="card">
-                        <div class=" p-4 ">
-                            <img src="assets/images/purchase.png" class="float-left" alt="" width="60" height="60">
-                            <span class="ml-auto float-right cardName">
-                                Purchase </span>
-                        </div>
-                        <div class="body p-3 text-center">
-                            <a href="javascript:void(0)" [routerLink]="['/inventory/purchase',0]">
-                                <i class="  fa fa-arrow-right"></i>
-                            </a>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 crds">
-                <a href="javascript:void(0)" routerLink="/inventory/transfer-product" class="hoc">
-                    <div class="card">
-                        <div class=" p-4 ">
-                            <img src="assets/images/transfer.png" class="float-left" alt="" width="60" height="60">
-                            <span class="ml-auto float-right cardName">
-                                Product Transfer </span>
-                        </div>
-                        <div class="body p-3 text-center">
-                            <a href="javascript:void(0)" routerLink="/inventory/transfer-product">
-                                <i class=" fa fa-arrow-right"></i>
-                            </a>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 crds">
-                <a href="javascript:void(0)" routerLink="/admin/messageSetting" class="hoc">
-                    <div class="card">
-                        <div class=" p-4">
-                            <img src="assets/images/sms-removebg-preview.png" class="float-left" alt="" width="60"
-                                height="60"> <span class="ml-auto float-right cardName"
-                                >Message</span>
-                        </div>
-                        <div class="body p-3 text-center">
-                            <a href="javascript:void(0)" routerLink="/admin/messageSetting">
-                                <i class="  fa fa-arrow-right"></i>
-                            </a>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 crds">
-                <a href="javascript:void(0)" routerLink="/companypay/expense/0" class="hoc">
-                    <div class="card">
-                        <div class=" p-4">
-                            <img src="assets/images/expense.png" class="float-left" alt="" width="60" height="60"> <span
-                                class="ml-auto float-right cardName"
-                               >Expense </span>
-                        </div>
-                        <div class="body p-3 text-center">
-                            <a href="javascript:void(0)" routerLink="/companypay/expense/0">
-                                <i class="  fa fa-arrow-right"></i>
-                            </a>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 crds">
-                <a href="javascript:void(0)" routerLink="/prodservice/productManage" class="hoc">
-                    <div class="card">
-                        <div class=" p-4">
-                            <img src="assets/images/search-product.png" class="float-left" alt="" width="60"
-                                height="60"> <span class="ml-auto float-right cardName"
-                               > Product Search </span>
-                        </div>
-                        <div class="body p-3 text-center">
-                            <a href="javascript:void(0)" routerLink="/prodservice/productManage">
-                                <i class="  fa fa-arrow-right " style="left: 0;"></i>
-                            </a>
-                        </div>
-                    </div>
-                </a>
+            <div *ngFor="let stat of cards" class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 crds">
+                <app-dashcard [title]="stat.title" [icon]="stat.icon" [routersLinks]="stat.routersLinks">
+                </app-dashcard>
             </div>
         </div>
     </div>
