--- a/web/src/app/admin/admin-dashborad/admin-dashborad.component.html
+++ b/web/src/app/admin/admin-dashborad/admin-dashborad.component.html
@@ -1,72 +1,10 @@
 <section class="content">
-    <div class="container-fluid">
-        <div class="row ">
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 crds">
-                <a href="javascript:void(0)" [routerLink]="['/admin/company',0]" class="hoc">
-                    <div class="card ">
-                        <div class=" p-4">
-                            <img src="assets/images/customer.png" class="float-left" alt="" width="60" height="60">
-                            <span class="ml-auto float-right name"
-                                style="font-size:25px;font-weight:600;margin-top:5%;">New Company</span>
-                        </div>
-                        <div class="body p-3 text-center">
-                            <a href="javascript:void(0)" [routerLink]="['/admin/company',0]">
-                                <i class="  fa fa-arrow-right"></i>
-                            </a>
-                        </div>
-                    </div>
-                </a>
+    <div class="container-fluid ">
+        <div class="row p-4 mt-0">
+            <div *ngFor="let stat of cards" class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 crds">
+                <app-dashcard [title]="stat.title" [icon]="stat.icon" [routersLinks]="stat.routersLinks">
+                </app-dashcard>
             </div>
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 crds">
-                <a href="javascript:void(0)" [routerLink]="['/admin/companyList']" class="hoc">
-                    <div class="card ">
-                        <div class=" p-4">
-                            <img src="assets/images/customer.png" class="float-left" alt="" width="60" height="60">
-                            <span class="ml-auto float-right name"
-                                style="font-size:25px;font-weight:600;margin-top:5%;">Company List</span>
-                        </div>
-                        <div class="body p-3 text-center">
-                            <a href="javascript:void(0)" [routerLink]="['/admin/companyList']">
-                                <i class="  fa fa-arrow-right"></i>
-                            </a>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 crds">
-                <a href="javascript:void(0)" [routerLink]="['/sale/customer', 0]" class="hoc">
-                    <div class="card ">
-                        <div class=" p-4">
-                            <img src="assets/images/customer.png" class="float-left" alt="" width="60" height="60">
-                            <span class="ml-auto float-right name"
-                                style="font-size:25px;font-weight:600;margin-top:5%;">Plan</span>
-                        </div>
-                        <div class="body p-3 text-center">
-                            <a href="javascript:void(0)" [routerLink]="['/sale/customer', 0]">
-                                <i class="  fa fa-arrow-right"></i>
-                            </a>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 crds">
-                <a href="javascript:void(0)" [routerLink]="['/sale/customer', 0]" class="hoc">
-                    <div class="card ">
-                        <div class=" p-4">
-                            <img src="assets/images/customer.png" class="float-left" alt="" width="60" height="60">
-                            <span class="ml-auto float-right name"
-                                style="font-size:25px;font-weight:600;margin-top:5%;">Product Master</span>
-                        </div>
-                        <div class="body p-3 text-center">
-                            <a href="javascript:void(0)" [routerLink]="['/sale/customer', 0]">
-                                <i class="  fa fa-arrow-right"></i>
-                            </a>
-                        </div>
-                    </div>
-                </a>
-            </div>
-
-
         </div>
     </div>
 </section>
