--- a/web/src/app/inventory/purchase-list/purchase-list.component.html
+++ b/web/src/app/inventory/purchase-list/purchase-list.component.html
@@ -95,13 +95,29 @@
                         <tbody>
                           <tr class="text-center" *ngFor="let data of dataList let i = index;"
                             style="white-space: nowrap;">
-                            <td style="width: 7%;">
-                              <mat-icon class="edit_icon ms-1" [routerLink]="['/inventory/fitter',data.ID]">edit
-                              </mat-icon>
-                              <mat-icon class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
+                            <td style="width: 5%;">
+                              <button class="bg-btn" [routerLink]="['/inventory/purchase',data.ID]">
+                                <mat-icon class="edit_icon ms-1" >edit
+                                </mat-icon>
+                              </button>
+                              <button class="bg-btn" (click)="deleteItem(i)">
+                                <mat-icon class="delete_icon ms-1" >delete_forever</mat-icon>
+                              </button>
+                             
                             </td>
                             <td>{{ dataList.length - i }}</td>
-                           
+                            <td>{{data.SupplierName}}</td>
+                            <td>{{data.InvoiceNo}}</td>
+                            <td>{{data.ShopName}}<span [style.color]="'blue'" *ngIf="data.AreaName !== 'null'">({{data.AreaName}})</span></td>
+                            <td>{{data.PurchaseDate}}</td>
+                            <td>{{data.PaymentStatus}}</td>
+                            <td>{{(data.GSTNo !== 'null')? data.GSTNo: ''}}</td>
+                            <td>{{data.Quantity}}</td>
+                            <td>{{data.TotalAmount}}</td>
+                            <td>{{data.DiscountAmount}}</td>
+                            <td>{{data.GSTAmount}}</td>
+                            <td>{{data.CreatedPerson}}</td>
+                            <td>{{data.UpdatedPerson}}</td>
                           </tr>
                         </tbody>
                       </table>
