--- a/web/src/app/inventory/purchase/purchase.component.html
+++ b/web/src/app/inventory/purchase/purchase.component.html
@@ -41,8 +41,7 @@
                                             [(ngModel)]="selectedPurchaseMaster.SupplierName" required #singleSelect
                                             [disabled]="selectedPurchaseMaster.ID !== null"
                                             (selectionChange)="getSupplierDetails($event)">
-                                            <mat-option *ngFor="let sup of supplierList let i = index;"
-                                                [value]="sup.Name">
+                                            <mat-option [value]="sup.Name" *ngFor="let sup of supplierList let i = index;">
                                                 {{sup.Name}}
                                             </mat-option>
                                         </mat-select>
@@ -89,7 +88,7 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
+                                <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0" *ngIf="category !== 'Charges'">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Product</mat-label>
                                         <mat-select name="FieldType" [(ngModel)]="selectedProduct"
@@ -398,7 +397,7 @@
                             <!-- Charge input model end -->
                         </form>
                         <!-- save purchase end -->
-                        <form #f2="ngForm">
+                        <form #f2="ngForm"  (ngSubmit)="onSumbit()">
                             <!-- Add item List start -->
                             <div class="row">
                                 <div class="col-sm-12" style="overflow: auto; height: 340px;">
@@ -410,7 +409,7 @@
                                                     <th style="z-index: 0 !important;">
                                                         <mat-checkbox></mat-checkbox>
                                                     </th>
-                                                    <th> Action</th>
+                                                    <th>Action</th>
                                                     <th>BaseBarCode</th>
                                                     <th>Code</th>
                                                     <th>ProductCategory</th>
@@ -433,11 +432,12 @@
                                                         <mat-checkbox [(ngModel)]="data.Checked" name="{{i + 'name'}}" [checked]="data.Checked" [ngModelOptions]="{standalone: true}" >
                                                         </mat-checkbox>
                                                     </td>
+                                                    <td style="z-index: -999 !important;" *ngIf="this.id !== 0 && data.ID === null && data.Status === 0"></td>
                                                     <td class="text-center">
                                                         <mat-icon *ngIf="data.Status !== 0" class="delete_icon ms-1">print</mat-icon>
-                                                        <mat-icon *ngIf="data.Status !== 0" class="delete_icon ms-1" >delete_forever</mat-icon>
+                                                        <mat-icon *ngIf="data.Status !== 0" class="delete_icon ms-1" (click)="deleteItem('Product',i)">delete_forever</mat-icon>
                                                     </td>
-                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.BaseBarCode}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status == 0, 'addClass': data.Status == 2 }" class="text-center">{{data.BaseBarCode}}</td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.UniqueBarcode}}</td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.ProductName}}</td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.UnitPrice }}</td>
@@ -453,6 +453,27 @@
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.WholeSalePrice}}</td>
                                                 </tr>
                                                
+                                                <tr *ngFor="let data of chargeList ; let i = index;">
+                                                    <td></td>
+                                                    <td class="text-center">
+                                                        <mat-icon *ngIf="data.Status !== 0" class="delete_icon ms-1" (click)="deleteItem('Charges',i)">delete_forever</mat-icon>
+                                                    </td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">--</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">--</td>
+                                                    <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.ChargeType}}/{{data.Description}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">--</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">--</td>
+                                                    <td *ngIf="data.ID !== null" class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.Amount }} </td>
+                                                    <td *ngIf="data.ID === null" class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.Price}} </td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.GSTAmount}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.GSTPercentage}}%</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.GSTType}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">--</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">--</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.TotalAmount}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">--</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">--</td>
+                                                </tr>
                                             </tbody>
                                         </table>
                                     </div>
@@ -539,7 +560,7 @@
                                         color="primary">PrintBarcode</button>
                                 </div>
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ml-auto">
-                                    <button type="submit" [disabled]="id !== 0" mat-raised-button color="primary">Save
+                                    <button type="submit"  [disabled]="itemList.length == 0 || id != 0" mat-raised-button color="primary">Save
                                         PO</button>
                                 </div>
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 mr-3">
