--- a/web/src/app/inventory/purchase/purchase.component.html
+++ b/web/src/app/inventory/purchase/purchase.component.html
@@ -392,6 +392,7 @@
                                     class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ml-auto">
                                     <button class="mr-3" (click)="calculateFields('TAmount', 'chtotal')" type="submit" [disabled]="!f.valid " mat-raised-button
                                         color="primary">Add</button>
+                                        
                                 </div>
                             </div>
                             <!-- Charge input model end -->
@@ -428,17 +429,15 @@
                                             </thead>
                                             <tbody>
                                                 <tr *ngFor="let data of itemList ; let i = index;">
-                                                    <td class="text-center" *ngIf="data.Status === 1">
+                                                    <td class="text-center" >
                                                         <mat-checkbox [(ngModel)]="data.Checked" name="{{i + 'name'}}" [checked]="data.Checked" [ngModelOptions]="{standalone: true}" >
                                                         </mat-checkbox>
                                                     </td>
-                                                    <td style="z-index: -999 !important;" *ngIf="this.id !== 0 && data.ID === null || data.Status === 0"></td>
+                                                    <!-- <td style="z-index: -999 !important;" *ngIf="data.Status === 0"></td> -->
                                                     <td class="text-center">
                                                         <mat-icon *ngIf="data.Status !== 0" class="delete_icon ms-1">print</mat-icon>
                                                         <mat-icon *ngIf="data.Status !== 0" class="delete_icon ms-1" (click)="deleteItem('Product',i)">delete_forever</mat-icon>
-                                                    <button class="bg_none" type="button" *ngIf="data.Status === 0 && data.UpdatedBy == null">
-                                                      <mat-icon class="restore">autorenew</mat-icon>
-                                                    </button>
+                                                        <mat-icon class="delete_icon ms-1" (click)="edititem('Product',data)" *ngIf="data.ID !== null && data.Status !== 0">edit </mat-icon>
                                                     </td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.BaseBarCode}}</td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.UniqueBarcode}}</td>
@@ -516,10 +515,10 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0" *ngFor="let gg of gstdividelist">
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0" >
                                     <mat-form-field class="example-full-width mb-0">
-                                    <mat-label>{{gg.GstType | titlecase}}</mat-label>
-                                    <input matInput name="{{gg.GstType}}" [(ngModel)]="gg.Amount" disabled>
+                                    <mat-label>IGST</mat-label>
+                                    <input matInput name="igstAmt" [(ngModel)]="igstAmt" disabled>
                                     <mat-error>
                                         GST Amt is required
                                     </mat-error>
