--- a/web/src/app/inventory/supplier/supplier.component.html
+++ b/web/src/app/inventory/supplier/supplier.component.html
@@ -213,7 +213,8 @@
                             <mat-form-field class="example-full-width mb-0">
                                 <mat-label>GST/VAT No</mat-label>
                                 <input matInput name="GSTNo" [(ngModel)]="data.GSTNo"
-                                    (ngModelChange)="data.GSTNo = onChange($event)" #GSTNocontrol>
+                                    (ngModelChange)="data.GSTNo = onChange($event)"  #GSTNocontrol>
+                                    <!-- pattern="^[0-9]{2}[A-Z]{5}[0-9]{4}[A-Z]{1}[1-9A-Z]{1}Z[0-9A-Z]{1}$"  -->
                                 <mat-error>
                                     GST No is required
                                 </mat-error>
